src/objects/Frequently_Asked_Question__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This FAQ Article Type shows all knowledge articles that is frequently asked questions by the subscriber/ future subscriber.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF( Today()&lt;= Valid_Until__c  , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;))</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <label>Valid Until</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Frequently Asked Question</label>
    <pluralLabel>Frequently Asked Questions</pluralLabel>
</CustomObject>